--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="panel">
             <h2>How to use</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/YhmmAsROvFg?si=Mh82f74wYwlXPZhA" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
